added some code and the link

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>The index html file</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My GitHub Pages Site</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            background: #333;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin-right: 20px;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+<nav>
+    <a href="about.html">About</a>
+    <a href="features.html">Features</a>
+    <a href="setup.html">Setup</a>
+</nav>
+<main>
+    <h1>Welcome to My GitHub Pages Site</h1>
+    <p>This is the front page. Use the menu to navigate to other sections.</p>
+</main>
+</body>
+</html>
