--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub Pages Site</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../GithubPages/docs/styles.css">
     <script>
         // Load the menu dynamically
         document.addEventListener("DOMContentLoaded", function() {
@@ -28,8 +28,6 @@
 
 <nav>
     <a href="about.html">About</a>
-    <a href="features.html">Features</a>
-    <a href="setup.html">Setup</a>
 </nav>
 <main>
     <h1>Welcome to My GitHub Pages Site</h1>
