--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 
-<header></header>
+<header>
+    {% include menu.html %}
+</header>
 <main>
-    <h1>Welcome to My Page</h1>
+    <h1>Welcome to bffgbMy Page</h1>
     <p>This is the content of the page.</p>
 </main>
 
